# gguf

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
ggml-quants/: Cargo.toml  README.md
ggml-quants/src/: lib.rs  structs.rs  types.rs
ggml-quants/src/structs/: half.rs  iq1m.rs  iq1s.rs  iq2s.rs  iq2xs.rs  iq2xxs.rs  iq3s.rs  iq3xxs.rs  iq4nl.rs  iq4xs.rs  q2_k.rs  q3_k.rs  q4_0.rs  q4_0_4_4.rs  q4_0_8_8.rs  q4_1.rs  q4_k.rs  q5_0.rs  q5_1.rs  q5_k.rs  q6_k.rs  q8_0.rs  q8_1.rs  q8_k.rs
ggml-quants/src/types/: half.rs  iq1s.rs  iq2s.rs  iq2xs.rs  iq2xxs.rs  iq3xxs.rs  iq4xs.rs  q2_k.rs  q4_0.rs  q4_0_4_8.rs  q4_1.rs  q5_0.rs  q5_1.rs  q5_k.rs  q6_k.rs  q8_0.rs
gguf-core/: Cargo.toml
gguf-core/src/: header.rs  lib.rs  metadata.rs  reader.rs  tensor.rs
gguf-core/src/metadata/: general.rs  llm.rs
ggus/: Cargo.toml  README.md
ggus/src/: file.rs  header.rs  lib.rs  name.rs  read.rs  reader.rs  tensor.rs  writer.rs
ggus/src/metadata/: collection.rs  general.rs  llm.rs  meta_kv.rs  mod.rs  standard.rs  tokenizer.rs  types.rs
ggus/src/name/: mod.rs  path.rs  shard.rs  size_label.rs  type.rs  version.rs
ggus/src/write/: file_writer.rs  internal.rs  mod.rs  simulator.rs  writer.rs
meta-kv-macro/: Cargo.toml
meta-kv-macro/src/: ident_collector.rs  lib.rs
quantization/: Cargo.toml
quantization/src/: half.rs  lib.rs  q4_0.rs  q4_1.rs  q5_0.rs  q5_1.rs  q8_0.rs
src/: lib.rs  metadata.rs  tensor.rs
xtask/: Cargo.toml
xtask/src/: cast.rs  convert.rs  file_info.rs  filter.rs  gguf_file.rs  loose_shards.rs  main.rs  merge.rs  name_pattern.rs  set_meta.rs  shards.rs  show.rs  split.rs  to_llama.rs
xtask/src/convert/: mod.rs  operator.rs  read.rs  write.rs
xtask/src/utils/: file_info.rs  mod.rs  name_pattern.rs  operator.rs  output.rs  read.rs  write.rs
xtask/src/utils/operator/: cast.rs  distribute.rs  merge.rs  mod.rs  quantize.rs  scale_token_embd.rs  set_arch.rs  set_meta.rs  sort.rs  to_llama.rs  transpose.rs
