[package]
name = "ggml-quants"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[features]
default = ["types"]
types = ["digit-layout"]

[dependencies]
rayon.workspace = true
digit-layout = { version = "0.1", optional = true }
half = "2.4"
itertools = "0.13.0"

[dev-dependencies]
rand = "0.8"
