[package]
name = "ggml-quants"
description = "GGml defined quantized data types and their quant/dequant algorithm"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>", "pwhMass <a203865235@gmail.com>"]
repository = "https://github.com/InfiniTensor/gguf"
documentation = "https://docs.rs/ggml-quants"
license = "MIT"
readme = "README.md"
keywords = ["gguf", "ggml", "llama-cpp"]
categories = ["algorithms", "data-structures"]

[features]
default = ["types"]
types = ["digit-layout"]

[dependencies]
rayon.workspace = true
digit-layout = { version = "0.2", optional = true }
half = "2.4"
itertools = "0.13.0"

[dev-dependencies]
rand = "0.8"
