[package]
name = "ggus"
description = "GGUF in Rust🦀"
version = "0.1.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/gguf"
documentation = "https://docs.rs/ggus"
license = "MIT"
readme = "README.md"
keywords = ["gguf", "ggml", "llama-cpp"]
categories = ["parsing", "parser-implementations", "encoding"]

[dependencies]
indexmap.workspace = true
