[package]
name = "ggus"
description = "GGUF in Rust🦀"
version = "0.2.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/gguf"
documentation = "https://docs.rs/ggus"
license = "MIT"
readme = "README.md"
keywords = ["gguf", "ggml", "llama-cpp"]
categories = ["parsing", "parser-implementations", "encoding"]

[dependencies]
ggml-quants = { version = "0.0", path = "../ggml-quants" }
meta-kv-macro = { version = "0.0", path = "../meta-kv-macro" }
indexmap.workspace = true
fancy-regex = "0.13"
