[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
ggus.path = "../ggus"
ggml-quants.path = "../ggml-quants"
indexmap.workspace = true
rayon.workspace = true
itertools = "0.13"
memmap2 = "0.9"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }

time = "0.3"
log = "0.4"
simple_logger = "5.0"
